# uk-layout-switcher

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
