[package]
name = "uk-layout-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.14"
tao = "0.30"
global-hotkey = "0.6"
enigo = "0.2"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
image = "0.25"
winreg = "0.52"
rdev = "0.5"
once_cell = "1.19"

# Специфічні фічі для windows 0.58 для безшумного перемикання розкладки
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse"
] }
[build-dependencies]
winres = "0.1"